[package]
name = "lkh-rs"
version = "0.1.0"
authors = ["Euraxluo <euraxluo@outlook.com>"]
edition = "2021"
build = "build.rs"
description = "Rust bindings and safe wrappers for the LKH3 heuristic solver"
readme = "README.md"
repository = "https://github.com/Euraxluo/LKH-rs"
license = "MIT"
keywords = ["tsp", "lkh", "optimization", "ffi"]
categories = ["algorithms", "api-bindings"]

[[bin]]
name = "lkh"
path = "src/main.rs"

[lib]
name = "lkh_rs"
crate-type = ["rlib", "cdylib"]

[build-dependencies]
bindgen = "0.66.1"
envmnt = "0.10.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
cc = { version = "1.0.79", features = ["parallel"] }
dunce = "1.0.4"
ignore = "0.4.20"

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
dunce = "1.0.4"
env_logger = "0.10.0"
log = "0.4.19"
pathdiff = "0.2.1"
thiserror = "1.0"
pyo3 = { version = ">=0.24.1, <0.30", optional = true, features = ["abi3-py38"] }

[features]
default = []
demo = []
unsafe-ffi = []
python = ["dep:pyo3"]
python-extension-module = ["python", "pyo3/extension-module"]
wasm-experimental = []
