[build-system]
requires = ["maturin>=1.9.4,<2"]
build-backend = "maturin"

[project]
name = "lkh-rs"
version = "0.1.0"
description = "Python bindings for the LKH-rs solver wrapper"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Euraxluo", email = "euraxluo@outlook.com" }]
keywords = ["tsp", "lkh", "optimization"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering",
]

[tool.maturin]
bindings = "pyo3"
features = ["python"]
python-source = "python"
module-name = "lkh_rs._native"
